syntax = "proto3";

package api.comment;
import "google/api/annotations.proto";

option go_package = "comment/api/comment;comment";
option java_multiple_files = true;
option java_package = "api.comment";
import "api/v1/comment/comment.proto";
service CommentService {
  rpc AddComment (CreateCommentRequest) returns (CreateCommentReply) {
    option (google.api.http) = {
      post:"/api/addComment",
      body:"*"
    };
  };
  rpc AddReward (CreateRewardRequest) returns (CreateRewardReply) {
    option (google.api.http) = {
      post:"/api/addReward/{reward_id}",
      body:"*"
    };
  };
  rpc ExtractParentComments (ExtractParentCommentsRequest) returns (ExtractParentCommentsReply) {
    option (google.api.http) = {
      get:"/api/getComment/{id}"
    };
  };
}